--- a/src/styles/Base/_variables.scss
+++ b/src/styles/Base/_variables.scss
@@ -1,5 +1,7 @@
 $primary-color: #ff6060;
 $secondary-color: #f7f7f7;
+$tertiary-color: #FFFFFF;
+
 
 $breakpoints: (
   small: 350px,
@@ -10,3 +12,6 @@ $breakpoints: (
 
 
 $breakpoint-desktop: 769px;
+
+
+$font-family: "Montserrat";
