--- a/src/components/banner/_Banner.scss
+++ b/src/components/banner/_Banner.scss
@@ -1,19 +1,81 @@
 .banner {
     border-radius: 10px;
-    height: 111px;
+ 
     width: 90%;
     margin: auto;
     margin-bottom: 35px;
     position: relative;
-    @media screen and (min-width: $breakpoint-desktop) {
-      border-radius: 25px;
-      height: 220px;
+    @media screen and (max-width: $breakpoint-desktop) {
+      width: 95%;
+      text-align: center;
+     
+      text-wrap: wrap;
+      
     }
+
+    
   
     &__img{
         border-radius: 25px;
-        height: 100%;
+        height: 150px;
         object-fit: cover;
         width: 100%;
+        z-index: 1;
+        @media screen and (max-width: $breakpoint-desktop) {
+         max-height: 111px;
+         border-radius: 10px;
+         -webkit-border-radius: 10px;
+         -moz-border-radius: 10px;
+         -ms-border-radius: 10px;
+         -o-border-radius: 10px;
+}
+       
     }
+
+    &__shadow{
+      background-color: black;
+      width: 100%;
+     height:  150px;
+     border-radius: 25px;
+     position: absolute;
+     top: 0;
+      z-index: 2;
+      opacity: 30%;
+      @media screen and (max-width: $breakpoint-desktop) {
+        max-height: 111px;
+        border-radius: 10px;
+        -webkit-border-radius: 10px;
+        -moz-border-radius: 10px;
+        -ms-border-radius: 10px;
+        -o-border-radius: 10px;
+       }
+    
+    }
+    &__title {
+  position: absolute;
+  top: 30%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color:$secondary-color;
+  font-size: 38px;
+  font-weight: 500;
+  text-align: center;
+  text-wrap: nowrap;
+  z-index: 3;
+        &__br{
+          display: none;
+        }
+  @media screen and (max-width: $breakpoint-desktop) {
+    width: 70%;
+    margin-top: 3%;
+    font-size: 24px;
+    text-wrap: wrap;
+    text-align: left;
+    margin-left: -10%;
+    &__br{
+      display: block;
+    }
+    
+  }
+}
 } 
