--- a/src/components/nav/_nav.scss
+++ b/src/components/nav/_nav.scss
@@ -1,25 +1,74 @@
 .nav-header {
-    
+    margin-top: 2%;
     font-size: 24px;
     text-decoration: none;
     display: flex;
     
-
+    text-wrap: nowrap;
+    display: initial;
     @media screen and (max-width: $breakpoint-desktop) {
+        max-width: 90%;
 	font-size: 17px;
-    a{padding-bottom: 20px;}
+        // padding-top: 5%;
+
 	}
+    &__nav-url-on{
+        color: $primary-color;
+        
+        padding-left: 2rem;
+         padding-top: 1em;
+        text-decoration: none; 
+       
+          &:visited{
+              color: $primary-color;
+          }
+          &:focus, &:hover{
+              text-decoration: underline;
+          }
   
-}   a{
+         
+          }
+   &__nav-url{
       color: $primary-color;
+      
       padding-left: 2rem;
-      padding-top: 2rem;
-      text-decoration: none;
+       padding-top: 1em;
+      text-decoration: none; 
+      &__active{ 
+            // text-decoration : underline 
+        }
         &:visited{
             color: $primary-color;
         }
         &:focus, &:hover{
             text-decoration: underline;
         }
+
+       
+        }
+        @media screen and (max-width: $breakpoint-desktop) {
+         
         
-}
+         
+            }
+          
+        
+} 
+
+
+.nav-header__nav-url_on{
+    color: $primary-color;
+    
+    padding-left: 2rem;
+     padding-top: 1em;
+    text-decoration: underline; 
+   
+      &:visited{
+          color: $primary-color;
+      }
+      &:focus, &:hover{
+          text-decoration: underline;
+      }
+
+     
+      }
