--- a/src/styles/Base/_base.scss
+++ b/src/styles/Base/_base.scss
@@ -1,6 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
-
+@import "./_variables";
 
 *{
-    font-family: "Montserrat";
+    font-family: $font-family;
+    
+}
+@media screen and (min-width: $breakpoint-desktop) {
+    body{   width: 85%;
+    margin: auto;
+}
+ 
 }
