--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,6 +3,7 @@
 
 
 @import "../pages/home/Home";
+@import "../pages//about/About";
 
 @import "../components/banner/_Banner";
 @import "../components/header/_Header";
