--- a/src/components/banner/_Banner.scss
+++ b/src/components/banner/_Banner.scss
@@ -1,7 +1,7 @@
 .banner {
     border-radius: 10px;
  
-    width: 90%;
+    width: 1240px;
     margin: auto;
     margin-bottom: 35px;
     position: relative;
