--- a/src/components/gallery/_Gallery.scss
+++ b/src/components/gallery/_Gallery.scss
@@ -1,6 +1,6 @@
 .gallery{
     background-color: $secondary-color;
-    width: 90%;
+    max-width: 1240px;
     
     margin: auto;
     border-radius: 25px;
@@ -8,12 +8,27 @@
     -moz-border-radius: 25px;
     -ms-border-radius: 25px;
     -o-border-radius: 25px;
+    @media screen and (max-width: $breakpoint-desktop) {
+        width: 93%;
+        
+        
+      }
+
     &__item{
         display: inline-flex;
+        justify-content: space-around;
   margin: auto;
   padding: 0;
   width: 33%;
   text-align: center;
-        
+
+  @media screen and (max-width: $breakpoint-2) {
+    width: 48%;
+    
+  }
+  @media screen and (max-width: $breakpoint-3) {
+    width: 100%;
+    
+  }
     }
 }
