--- a/src/components/header/_Header.scss
+++ b/src/components/header/_Header.scss
@@ -1,5 +1,7 @@
 .header {
     display: flex;
+    max-width: 1240px;
+    margin: auto;
     justify-content: space-between;
     padding: 40px 70px;
     
