--- a/src/css/main.css
+++ b/src/css/main.css
@@ -2,6 +2,7 @@
 * {
   font-family: "Montserrat";
   text-decoration: none;
+  box-sizing: border-box;
 }
 
 @media screen and (min-width: 769px) {
@@ -20,7 +21,7 @@
 
 .banner {
   border-radius: 10px;
-  width: 1240px;
+  max-width: 1240px;
   margin: auto;
   margin-bottom: 35px;
   position: relative;
