--- a/src/styles/Base/_base.scss
+++ b/src/styles/Base/_base.scss
@@ -4,6 +4,7 @@
 *{
     font-family: $font-family;
     text-decoration: none;
+    box-sizing: border-box;
     
 }
 @media screen and (min-width: $breakpoint-desktop) {
