--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,4 +9,5 @@
 @import "../components/header/_Header";
 @import "../components/nav/_Nav";
 @import "../components/gallery/_Gallery";
-@import "../components/card/Card"
+@import "../components/card/Card";
+@import "../components/footer/Footer"
