--- a/src/components/banner/_Banner.scss
+++ b/src/components/banner/_Banner.scss
@@ -1,6 +1,6 @@
 .banner {
     border-radius: 10px;
- 
+    width: 95%;
     max-width: 1240px;
     margin: auto;
     margin-bottom: 35px;
@@ -17,17 +17,13 @@
   
     &__img{
         border-radius: 25px;
-        height: 150px;
+        height: 223px;
         object-fit: cover;
         width: 100%;
         z-index: 1;
         @media screen and (max-width: $breakpoint-desktop) {
          max-height: 111px;
-         border-radius: 10px;
-         -webkit-border-radius: 10px;
-         -moz-border-radius: 10px;
-         -ms-border-radius: 10px;
-         -o-border-radius: 10px;
+         border-radius: 20px;
 }
        
     }
@@ -35,7 +31,7 @@
     &__shadow{
       background-color: black;
       width: 100%;
-     height:  150px;
+      height: 223px;
      border-radius: 25px;
      position: absolute;
      top: 0;
@@ -57,7 +53,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
   color:$secondary-color;
-  font-size: 38px;
+  font-size: 48px;
   font-weight: 500;
   text-align: center;
   text-wrap: nowrap;
