--- a/src/css/main.css
+++ b/src/css/main.css
@@ -7,7 +7,6 @@
 
 @media screen and (min-width: 769px) {
   body {
-    width: 85%;
     margin: auto;
   }
 }
@@ -21,6 +20,7 @@
 
 .banner {
   border-radius: 10px;
+  width: 95%;
   max-width: 1240px;
   margin: auto;
   margin-bottom: 35px;
@@ -35,7 +35,7 @@
 }
 .banner__img {
   border-radius: 25px;
-  height: 150px;
+  height: 223px;
   -o-object-fit: cover;
      object-fit: cover;
   width: 100%;
@@ -44,17 +44,13 @@
 @media screen and (max-width: 769px) {
   .banner__img {
     max-height: 111px;
-    border-radius: 10px;
-    -webkit-border-radius: 10px;
-    -moz-border-radius: 10px;
-    -ms-border-radius: 10px;
-    -o-border-radius: 10px;
+    border-radius: 20px;
   }
 }
 .banner__shadow {
   background-color: black;
   width: 100%;
-  height: 150px;
+  height: 223px;
   border-radius: 25px;
   position: absolute;
   top: 0;
@@ -77,7 +73,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
   color: #f7f7f7;
-  font-size: 38px;
+  font-size: 48px;
   font-weight: 500;
   text-align: center;
   text-wrap: nowrap;
@@ -172,6 +168,10 @@
 .gallery {
   background-color: #f7f7f7;
   max-width: 1240px;
+  width: 95%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
   margin: auto;
   border-radius: 25px;
   -webkit-border-radius: 25px;
@@ -179,18 +179,11 @@
   -ms-border-radius: 25px;
   -o-border-radius: 25px;
 }
-@media screen and (max-width: 769px) {
-  .gallery {
-    width: 93%;
-  }
-}
 .gallery__item {
   display: inline-flex;
   justify-content: space-around;
   margin: auto;
-  padding: 0;
   width: 33%;
-  text-align: center;
 }
 @media screen and (max-width: 1390px) {
   .gallery__item {
@@ -204,22 +197,21 @@
 }
 
 .card {
-  height: 338px;
-  width: 338px;
+  height: 340px;
   background-color: #ff6060;
   margin: 30px;
-  border-radius: 25px;
+  border-radius: 10px;
   text-decoration: none;
 }
 .card__title {
+  width: 55%;
   position: relative;
-  top: -20%;
+  top: -25%;
   left: 5%;
   color: #FFFFFF;
   text-decoration: none !important;
   text-align: left;
   z-index: 3;
-  transform: translate(-50%, -50%);
 }
 .card__title__:visited {
   text-decoration: none;
@@ -231,12 +223,12 @@
 }
 .card__cover {
   height: 340px;
-  width: 340px;
+  width: 100%;
   -o-object-fit: cover;
      object-fit: cover;
   position: relative;
   z-index: 1;
-  border-radius: 25px;
+  border-radius: 10px;
 }
 @media screen and (max-width: 769px) {
   .card__cover {
@@ -245,10 +237,36 @@
 }
 .card__cover-shadow {
   background: rgb(255, 255, 255);
-  background: linear-gradient(5deg, rgba(255, 255, 255, 0) 0%, rgb(0, 0, 0) 0%, rgba(255, 255, 255, 0) 47%, rgba(255, 255, 255, 0) 100%, rgba(255, 255, 255, 0) 100%, rgba(126, 126, 126, 0.3113620448) 100%);
-  width: 340px;
-  height: 340px;
-  border-radius: 25px;
+  background: linear-gradient(5deg, rgba(255, 255, 255, 0) 0%, rgb(0, 0, 0) 0%, rgba(255, 255, 255, 0) 30%, rgba(255, 255, 255, 0) 100%, rgba(255, 255, 255, 0) 100%, rgba(126, 126, 126, 0.3113620448) 100%);
+  width: 100%;
+  border-radius: 10px;
   position: absolute;
   z-index: 2;
+}
+.card__cover-shadow:hover {
+  background: rgb(255, 255, 255);
+  background: linear-gradient(5deg, rgba(255, 255, 255, 0) 0%, rgb(0, 0, 0) 0%, rgba(255, 255, 255, 0) 45%, rgba(255, 255, 255, 0) 100%, rgba(255, 255, 255, 0) 100%, rgba(126, 126, 126, 0.3113620448) 100%);
+}
+
+.footer {
+  background-color: #000000;
+  height: 209px;
+  width: 100%;
+  margin: 2% auto 0% 0;
+  text-align: center;
+}
+.footer__logo {
+  height: 39px;
+  margin-top: 3%;
+}
+.footer__copyright {
+  margin-top: 3%;
+  font-size: 24px;
+  text-align: center;
+  color: #f7f7f7;
+}
+@media screen and (max-width: 769px) {
+  .footer__copyright {
+    font-size: 12px;
+  }
 }
