--- a/src/css/main.css
+++ b/src/css/main.css
@@ -18,6 +18,51 @@
   width: 100%;
 }
 
+.collapse {
+  max-width: 80%;
+  margin: auto;
+}
+@media screen and (max-width: 1216px) {
+  .collapse {
+    max-width: 95%;
+  }
+}
+.collapse__title {
+  margin: auto;
+  max-width: 1023px;
+  height: 47px;
+  background-color: #ff6060;
+  color: #F6F6F6;
+  border-radius: 5px;
+  font-size: 24px;
+  position: relative;
+}
+@media screen and (max-width: 769px) {
+  .collapse__title {
+    font-size: 13px;
+  }
+}
+.collapse__title__arrow {
+  position: absolute;
+  height: 14px;
+  top: 17px;
+  right: 2%;
+}
+.collapse__text {
+  margin: auto;
+  max-width: 1023px;
+  height: 47px;
+  background-color: #F6F6F6;
+  color: #ff6060;
+  border-radius: 5px;
+  font-size: 24px;
+}
+@media screen and (max-width: 769px) {
+  .collapse__text {
+    font-size: 13px;
+  }
+}
+
 .banner {
   border-radius: 10px;
   width: 95%;
@@ -60,11 +105,11 @@
 @media screen and (max-width: 769px) {
   .banner__shadow {
     max-height: 111px;
-    border-radius: 10px;
-    -webkit-border-radius: 10px;
-    -moz-border-radius: 10px;
-    -ms-border-radius: 10px;
-    -o-border-radius: 10px;
+    border-radius: 25px;
+    -webkit-border-radius: 25px;
+    -moz-border-radius: 25px;
+    -ms-border-radius: 25px;
+    -o-border-radius: 25px;
   }
 }
 .banner__title {
@@ -72,7 +117,7 @@
   top: 30%;
   left: 50%;
   transform: translate(-50%, -50%);
-  color: #f7f7f7;
+  color: #F6F6F6;
   font-size: 48px;
   font-weight: 500;
   text-align: center;
@@ -166,7 +211,7 @@
 }
 
 .gallery {
-  background-color: #f7f7f7;
+  background-color: #F6F6F6;
   max-width: 1240px;
   width: 95%;
   display: flex;
@@ -185,23 +230,28 @@
   margin: auto;
   width: 33%;
 }
-@media screen and (max-width: 1390px) {
+@media screen and (max-width: 1216px) {
   .gallery__item {
     width: 48%;
   }
 }
-@media screen and (max-width: 970px) {
+@media screen and (max-width: 800px) {
   .gallery__item {
     width: 100%;
   }
 }
 
 .card {
-  height: 340px;
+  height: 338px;
+  max-width: 338px;
+  transition: transform 0.2s;
   background-color: #ff6060;
   margin: 30px;
   border-radius: 10px;
   text-decoration: none;
+}
+.card:hover {
+  transform: scale(1.035);
 }
 .card__title {
   width: 55%;
@@ -223,7 +273,7 @@
 }
 .card__cover {
   height: 340px;
-  width: 100%;
+  width: 340px;
   -o-object-fit: cover;
      object-fit: cover;
   position: relative;
@@ -238,14 +288,25 @@
 .card__cover-shadow {
   background: rgb(255, 255, 255);
   background: linear-gradient(5deg, rgba(255, 255, 255, 0) 0%, rgb(0, 0, 0) 0%, rgba(255, 255, 255, 0) 30%, rgba(255, 255, 255, 0) 100%, rgba(255, 255, 255, 0) 100%, rgba(126, 126, 126, 0.3113620448) 100%);
-  width: 100%;
+  height: 340px;
+  width: 340px;
   border-radius: 10px;
   position: absolute;
-  z-index: 2;
+  z-index: 3;
 }
 .card__cover-shadow:hover {
   background: rgb(255, 255, 255);
   background: linear-gradient(5deg, rgba(255, 255, 255, 0) 0%, rgb(0, 0, 0) 0%, rgba(255, 255, 255, 0) 45%, rgba(255, 255, 255, 0) 100%, rgba(255, 255, 255, 0) 100%, rgba(126, 126, 126, 0.3113620448) 100%);
+}
+
+.container {
+  color: #ff6060;
+  margin: auto;
+  text-align: center;
+}
+.container__errorNumber {
+  font-size: 288px;
+  font-weight: 700;
 }
 
 .footer {
@@ -263,7 +324,7 @@
   margin-top: 3%;
   font-size: 24px;
   text-align: center;
-  color: #f7f7f7;
+  color: #F6F6F6;
 }
 @media screen and (max-width: 769px) {
   .footer__copyright {
