--- a/src/styles/Base/_variables.scss
+++ b/src/styles/Base/_variables.scss
@@ -1,20 +1,14 @@
 $primary-color: #ff6060;
-$secondary-color: #f7f7f7;
+$secondary-color: #F6F6F6;
 $tertiary-color: #FFFFFF;
 $footer-color: #000000;
 
 
-$breakpoints: (
-  small: 350px,
-  medium: 768px,
-  large: 992px,
-  xlarge: 1200px,
-);
 
 
 $breakpoint-desktop: 769px;
-$breakpoint-2: 1390px;
-$breakpoint-3: 970px;
+$breakpoint-2: 1216px;
+$breakpoint-3: 800px;
 
 
 $font-family: "Montserrat";
