--- a/src/components/header/_Header.scss
+++ b/src/components/header/_Header.scss
@@ -18,3 +18,78 @@
         }
 	}
 }
+
+.nav-header {
+      margin-top: 2%;
+      font-size: 24px;
+      text-decoration: none;
+      display: flex;
+      
+      text-wrap: nowrap;
+      display: initial;
+      @media screen and (max-width: $breakpoint-desktop) {
+          max-width: 90%;
+        font-size: 17px;
+          // padding-top: 5%;
+  
+        }
+      &__nav-url-on{
+          color: $primary-color;
+          
+          padding-left: 2rem;
+           padding-top: 1em;
+          text-decoration: none; 
+         
+            &:visited{
+                color: $primary-color;
+            }
+            &:focus, &:hover{
+                text-decoration: underline;
+            }
+    
+           
+            }
+     &__nav-url{
+        color: $primary-color;
+        
+        padding-left: 2rem;
+         padding-top: 1em;
+        text-decoration: none; 
+        &__active{ 
+              // text-decoration : underline 
+          }
+          &:visited{
+              color: $primary-color;
+          }
+          &:focus, &:hover{
+              text-decoration: underline;
+          }
+  
+         
+          }
+          @media screen and (max-width: $breakpoint-desktop) {
+           
+          
+           
+              }
+            
+          
+  } 
+  
+  
+  .nav-header__nav-url_on{
+      color: $primary-color;
+      
+      padding-left: 2rem;
+       padding-top: 1em;
+      text-decoration: underline; 
+     
+        &:visited{
+            color: $primary-color;
+        }
+        &:focus, &:hover{
+            text-decoration: underline;
+        }
+  
+       
+        }
