--- a/src/components/ficheLogement/Slideshow/_Slideshow.scss
+++ b/src/components/ficheLogement/Slideshow/_Slideshow.scss
@@ -59,4 +59,38 @@
  }}
  
 
- 
+ .hide {
+  display: none;
+ }
+
+ @keyframes slideInRight {
+  0% {
+      transform: translateX(100%);
+      opacity: 0;
+  }
+  100% {
+      transform: translateX(0);
+      opacity: 1;
+  }
+}
+
+@keyframes slideInLeft {
+  0% {
+      transform: translateX(-100%);
+      opacity: 0;
+  }
+  100% {
+      transform: translateX(0);
+      opacity: 1;
+  }
+}
+
+.container-slideshow__img {
+  transition: transform 0.3s ease, opacity 0.3s ease;
+  &.slide-in-right {
+      animation: slideInRight 0.3s ease forwards;
+  }
+  &.slide-in-left {
+      animation: slideInLeft 0.3s ease forwards;
+  }
+}
