--- a/src/components/collapse/_Collapse.scss
+++ b/src/components/collapse/_Collapse.scss
@@ -1,12 +1,81 @@
 .collapse {
-    // text-align: center;
     max-width: 80%;
     margin: auto;
+    margin-bottom: 20px;
+    .collapse {
+      
+        max-width: 80%;
+        margin: auto;
+    
+        @media screen and (max-width: $breakpoint-2) {
+            max-width: 95%;
+        }
+    
+        &__title {
+            margin: auto;
+            max-width: 1023px;
+            height: 47px;
+            background-color: $primary-color;
+            color: $secondary-color;
+            border-radius: 5px;
+            font-size: 24px;
+            position: relative;
+            padding-left: 9px;
+    
+            p {
+                padding-top: 8px;
+                margin: 0; 
+            }
+    
+            @media screen and (max-width: $breakpoint-desktop) {
+                font-size: 13px;
+            }
+    
+            &__arrow {
+                position: absolute;
+                height: 14px;
+                top: 17px;
+                right: 2%;
+                cursor: pointer;
+                transition: transform 0.3s ease; 
+    
+                &.rotate-180 {
+                    transform: rotate(180deg);
+                }
+            }
+        }
+    
+        &__text {
+            margin: auto;
+            margin-top: -20px;
+            padding: 18px 9px 1px;
+            max-height: 0; 
+            overflow: hidden; 
+            opacity: 0;
+            max-width: 1023px;
+            background-color: $secondary-color;
+            color: $primary-color;
+            border-radius: 5px;
+            font-size: 24px;
+            transition: max-height 0.4s ease, opacity 0.4s ease;
+    
+            @media screen and (max-width: $breakpoint-desktop) {
+                font-size: 13px;
+            }
+    
+           
+            &.show {
+                max-height: 200px; 
+                opacity: 1;
+            }
+        }
+    }
+    
+    
     @media screen and (max-width: $breakpoint-2) {
         max-width: 95%;
-       }
-
-      
+    }
+    
 
     &__title {
         margin: auto;
@@ -18,38 +87,54 @@
         font-size: 24px;
         position: relative;
         padding-left: 9px;
-            p{
-                padding-top: 8px;
-            }        // padding-top: 8p;
-        
+        z-index: 1;
+
+        p {
+            padding-top: 8px;
+            margin: 0; 
+        }
+
         @media screen and (max-width: $breakpoint-desktop) {
             font-size: 13px;
-           }
+        }
 
-        &__arrow{
+        &__arrow {
             position: absolute;
             height: 14px;
             top: 17px;
-            right:2%;
+            right: 2%;
+            cursor: pointer;
+            transition: transform 0.3s ease;
+
+            &.rotate-180 {
+                transform: rotate(180deg);
+            }
         }
     }
-    &__text{
+
+    &__text {
+        z-index: 0;
         margin: auto;
         margin-top: -20px;
-        padding-top: 18px;
-        padding-left: 9px;
-        padding-bottom:1px;
-        
+        padding: 18px 9px 1px;
+        max-height: 0; 
+        overflow: hidden; 
+        opacity: 0;
         max-width: 1023px;
-        // height: 247px;
         background-color: $secondary-color;
         color: $primary-color;
         border-radius: 5px;
         font-size: 24px;
+        transition: max-height 0.4s ease, opacity 0.4s ease;
 
         @media screen and (max-width: $breakpoint-desktop) {
             font-size: 13px;
-           }
+        }
+
+      
+        &.show {
+            max-height: 200px; 
+            opacity: 1; 
+        }
     }
 }
-
