--- a/src/css/main.css
+++ b/src/css/main.css
@@ -19,7 +19,7 @@
 }
 
 .container-host {
-  width: 30%;
+  width: 20%;
   display: flex;
 }
 .container-host__avatar {
@@ -27,8 +27,12 @@
   border-radius: 50%;
 }
 
+.container-lieu {
+  width: 40%;
+}
+
 .container-title {
-  width: 60%;
+  width: 50%;
   font-size: 36px;
   font-weight: 500;
   color: #ff6060;
@@ -84,7 +88,49 @@
   }
 }
 
+.hide {
+  display: none;
+}
+
+@keyframes slideInRight {
+  0% {
+    transform: translateX(100%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+@keyframes slideInLeft {
+  0% {
+    transform: translateX(-100%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+.container-slideshow__img {
+  transition: transform 0.3s ease, opacity 0.3s ease;
+}
+.container-slideshow__img.slide-in-right {
+  animation: slideInRight 0.3s ease forwards;
+}
+.container-slideshow__img.slide-in-left {
+  animation: slideInLeft 0.3s ease forwards;
+}
+
+.container-produit {
+  color: #ff6060;
+  margin: auto;
+}
 .container-produit__details {
+  flex-direction: row;
+  flex-wrap: wrap;
+  display: inline-flex;
+  text-align: center;
   width: 85%;
   display: flex;
   justify-content: space-between;
@@ -94,6 +140,70 @@
 .collapse {
   max-width: 80%;
   margin: auto;
+  margin-bottom: 20px;
+}
+.collapse .collapse {
+  max-width: 80%;
+  margin: auto;
+}
+@media screen and (max-width: 1216px) {
+  .collapse .collapse {
+    max-width: 95%;
+  }
+}
+.collapse .collapse__title {
+  margin: auto;
+  max-width: 1023px;
+  height: 47px;
+  background-color: #ff6060;
+  color: #F6F6F6;
+  border-radius: 5px;
+  font-size: 24px;
+  position: relative;
+  padding-left: 9px;
+}
+.collapse .collapse__title p {
+  padding-top: 8px;
+  margin: 0;
+}
+@media screen and (max-width: 769px) {
+  .collapse .collapse__title {
+    font-size: 13px;
+  }
+}
+.collapse .collapse__title__arrow {
+  position: absolute;
+  height: 14px;
+  top: 17px;
+  right: 2%;
+  cursor: pointer;
+  transition: transform 0.3s ease;
+}
+.collapse .collapse__title__arrow.rotate-180 {
+  transform: rotate(180deg);
+}
+.collapse .collapse__text {
+  margin: auto;
+  margin-top: -20px;
+  padding: 18px 9px 1px;
+  max-height: 0;
+  overflow: hidden;
+  opacity: 0;
+  max-width: 1023px;
+  background-color: #F6F6F6;
+  color: #ff6060;
+  border-radius: 5px;
+  font-size: 24px;
+  transition: max-height 0.4s ease, opacity 0.4s ease;
+}
+@media screen and (max-width: 769px) {
+  .collapse .collapse__text {
+    font-size: 13px;
+  }
+}
+.collapse .collapse__text.show {
+  max-height: 200px;
+  opacity: 1;
 }
 @media screen and (max-width: 1216px) {
   .collapse {
@@ -110,9 +220,11 @@
   font-size: 24px;
   position: relative;
   padding-left: 9px;
+  z-index: 1;
 }
 .collapse__title p {
   padding-top: 8px;
+  margin: 0;
 }
 @media screen and (max-width: 769px) {
   .collapse__title {
@@ -124,23 +236,35 @@
   height: 14px;
   top: 17px;
   right: 2%;
+  cursor: pointer;
+  transition: transform 0.3s ease;
+}
+.collapse__title__arrow.rotate-180 {
+  transform: rotate(180deg);
 }
 .collapse__text {
+  z-index: 0;
   margin: auto;
   margin-top: -20px;
-  padding-top: 18px;
-  padding-left: 9px;
-  padding-bottom: 1px;
+  padding: 18px 9px 1px;
+  max-height: 0;
+  overflow: hidden;
+  opacity: 0;
   max-width: 1023px;
   background-color: #F6F6F6;
   color: #ff6060;
   border-radius: 5px;
   font-size: 24px;
+  transition: max-height 0.4s ease, opacity 0.4s ease;
 }
 @media screen and (max-width: 769px) {
   .collapse__text {
     font-size: 13px;
   }
+}
+.collapse__text.show {
+  max-height: 200px;
+  opacity: 1;
 }
 
 .banner {
