--- a/src/css/main.css
+++ b/src/css/main.css
@@ -53,6 +53,7 @@
   position: absolute;
   width: 100px;
   top: 40%;
+  z-index: 3;
   left: 4vw;
 }
 .container-slideshow__leftArrow img {
@@ -63,6 +64,7 @@
   width: 100px;
   top: 40%;
   right: 4vw;
+  z-index: 3;
 }
 .container-slideshow__rightArrow img {
   height: 6vw;
@@ -72,15 +74,31 @@
   color: #F6F6F6;
   left: 50%;
   bottom: 1vw;
+  z-index: 3;
 }
-.container-slideshow__img {
-  height: 223px;
-  -o-object-fit: cover;
-     object-fit: cover;
-  width: 90%;
-  z-index: 1;
+.container-slideshow__fade {
+  opacity: 1;
+  text-align: center;
+  z-index: 0;
+  height: 6vw;
+  width: 100%;
+  position: absolute;
   height: 411px;
   border-radius: 25px;
+  background-color: rgb(88, 14, 14);
+}
+.container-slideshow__img {
+  z-index: 0;
+  z-index: 0;
+  height: 411px;
+  width: 90%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 25px;
+  transition: opacity 0.2s ease;
+}
+.container-slideshow__img.fade-in {
+  animation: fadeIn 0.4s ease-in;
 }
 @media screen and (max-width: 769px) {
   .container-slideshow__img {
@@ -88,40 +106,16 @@
   }
 }
 
-.hide {
-  display: none;
-}
-
-@keyframes slideInRight {
+@keyframes fadeIn {
   0% {
-    transform: translateX(100%);
     opacity: 0;
+    background-color: white;
   }
   100% {
-    transform: translateX(0);
     opacity: 1;
+    background-color: transparent;
   }
 }
-@keyframes slideInLeft {
-  0% {
-    transform: translateX(-100%);
-    opacity: 0;
-  }
-  100% {
-    transform: translateX(0);
-    opacity: 1;
-  }
-}
-.container-slideshow__img {
-  transition: transform 0.3s ease, opacity 0.3s ease;
-}
-.container-slideshow__img.slide-in-right {
-  animation: slideInRight 0.3s ease forwards;
-}
-.container-slideshow__img.slide-in-left {
-  animation: slideInLeft 0.3s ease forwards;
-}
-
 .container-produit {
   color: #ff6060;
   margin: auto;
